--- a/latest/index.html
+++ b/latest/index.html
@@ -51,6 +51,7 @@
             <li><a href="wrapping-a-beam-io.html">How to wrap a Beam I/O</a></li>
             <li><a href="studio.html">Studio Integration</a></li>
             <li><a href="changelog.html">Changelog</a></li>
+            <li><a href="contributors.html">Wall of Fame</a></li>
             <li><a href="apidocs.html">API Documentation</a></li>
             <li><a href="appendix.html">Appendix</a></li>
           </ul>
@@ -132,6 +133,9 @@ if you prefer you can use the <a href="all-in-one.html">single page</a> document
 </li>
 <li>
 <p><a href="changelog.html">Changelog</a></p>
+</li>
+<li>
+<p><a href="contributors.html">Wall Of Fame</a></p>
 </li>
 <li>
 <p><a href="apidocs.html">API Documentation</a></p>
