--- a/latest/contributors.html
+++ b/latest/contributors.html
@@ -84,19 +84,19 @@
                 </div>
                 <div>
                     <h3 class="contributor-name" style="font-size:1.4em;">Romain Manni-Bucau</h3>
-                    <h3 class="contributor-commits" style="font-size:1.4em;">#257 commits</h3>
+                    <h3 class="contributor-commits" style="font-size:1.4em;">#258 commits</h3>
                     <p class="contributor-description">ASF / Java(EE) dev involved in OpenWebBeans, Meecrowave, DeltaSpike, BatchEE, Sirona, CukeSpace, ... Working for Talend on Studio and Big Data (Apache Beam) component framework.</p>
                 </div>
             </div>
             
             <div class="contributor">
                 <div>
-                    <img alt="ivan.honchar@globallogic.com" src="https://www.gravatar.com/avatar/999d68995ce2938381462668844f4713?s=140" style="width:140px">
+                    <img alt="Ivan Gonchar" src="https://www.gravatar.com/avatar/999d68995ce2938381462668844f4713?s=140" style="width:140px">
                 </div>
                 <div>
-                    <h3 class="contributor-name" style="font-size:1.4em;">ivan.honchar@globallogic.com</h3>
+                    <h3 class="contributor-name" style="font-size:1.4em;">Ivan Gonchar</h3>
                     <h3 class="contributor-commits" style="font-size:1.4em;">#63 commits</h3>
-                    <p class="contributor-description"></p>
+                    <p class="contributor-description">Java developer @Talend</p>
                 </div>
             </div>
             
